# glfw-builder

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.json  build_osx.patch  build_osx.sh  build_win32.bat  builder.bat  builder.sh  manifest.json  package-lock.json  package.json  prebuild.json  prebuild.manifest.json  run.sh
